# outcore_contraction

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  plan.txt  test_io.c
.cache/clangd/index/: engine.c.A50DCC6C248DF11A.idx  engine.cpp.8BD2F6780D744B45.idx  engine.h.522B852BBF414813.idx  engine.hpp.F463962829128ECB.idx  engine_tests.cpp.1E77315942963B6F.idx  gen_data.c.420C879984347092.idx  memory.c.1B789B91E9B4F8B0.idx  memory.h.0A279C932FA7F4BB.idx  registry.c.3EE881B7E2854DB9.idx  registry.h.0853B0F6381C7939.idx  tensor_store.c.DBB8EFA22071723B.idx  tensor_store.h.57A919EC2C69D205.idx  test_io.c.DBE167710CF25F3B.idx  test_io.c.F1E3768B9392320A.idx  test_memory.c.43EC0700F0F5B83A.idx  test_tensor_store.c.C5914BA88452F994.idx
bench/: run_all.c
include/: compile_flags.txt  einsum.h  engine.h  memory.h  metal_backend.h  odometer.h  registry.h  tensor_engine.h  tensor_io.h  tensor_store.h  write_queue.h
include/.cache/clangd/index/: engine.hpp.F463962829128ECB.idx  tensor_io.h.BA615E28F84A506A.idx  tensor_store.h.57A919EC2C69D205.idx
include/outcore/: engine.hpp
src/: compile_flags.txt  einsum.c  engine.c  engine.cpp  gen_data.c  main.c  memory.c  metal_backend.m  odometer.c  registry.c  tensor_engine.c  tensor_io.c  tensor_store.c  write_queue.c
tests/: bench_100gb_contraction.c  bench_compute_bound_40gb.c  bench_odd_strides_40gb.c  bench_small_contraction.c  engine_tests.cpp  test_100gb_contraction.c  test_accumulate.c  test_create_fill.c  test_einsum.c  test_high_rank.c  test_io.c  test_memory.c  test_mixed_rank.c  test_odometer.c  test_tensor_store.c  verify_accumulate.py  verify_mixed_rank.py
tools/: gen_100gb_complex.c  gen_complex_tensor.c  validate_contraction.py
